--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,12 +1,12 @@
-name: Playwright Tests
+name: Tests
 on:
   push:
     branches: [ main, dev ]
   pull_request:
     branches: [ main, dev ]
 jobs:
-  playwright:
-    name: 'Playwright Tests'
+  tests:
+    name: 'Tests'
     runs-on: ubuntu-latest
     container:
       image: mcr.microsoft.com/playwright:v1.40.0-jammy
@@ -21,3 +21,5 @@ jobs:
         run: npx playwright test
         env:
           HOME: /root
+      - name: Eslint test
+        run: npx eslint js/*.js  
