--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "eslint": "^8.56.0",
     "three": "^0.158.0",
     "vite": "^5.0.8"
+  },
+  "dependencies": {
+    "firebase": "^11.1.0"
   }
 }
